--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <h1>Isha Oswal</h1>
+        <h1>RDG & Co.</h1>
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
