--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CA Firm</title>
+    <title>RDG & Co. | CA Firm</title>
+    <meta name="Discription" content="RDG & Co. is a chartered Accountant firm offering tax, autit and consultancy service based in kalyan,India." />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
