--- a/index.html
+++ b/index.html
@@ -97,5 +97,7 @@
         <p>&copy; 2025 Isha & Associates | All Rights Reserved.</p>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
+
