--- a/index.html
+++ b/index.html
@@ -1,103 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RDG & Co. | CA Firm</title>
-    <meta name="Discription" content="RDG & Co. is a chartered Accountant firm offering tax, autit and consultancy service based in kalyan,India." />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <h1>RDG & Co.</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#owner">RDG & Co.</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RDG & Co. | CA Firm</title>
+  <meta name="description" content="RDG & Co. is a Chartered Accountant firm offering tax, audit, and consultancy services based in Kalyan, India." />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <section class="hero">
-      <div class="container">
-        <h2>Trusted Chartered Accountants Since 1981</h2>
-        <p>Delivering professional audit, tax, and consulting services.</p>
-      </div>
-    </section>
+  <!-- Header -->
+  <header>
+    <div class="container nav-container">
+      <h1 class="logo">RDG & Co.</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#owner">Founder</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="about" class="about">
-      <div class="container">
-        <h2>About Us</h2>
+  <!-- Hero -->
+  <section id="home" class="hero fade-in">
+    <div class="container">
+      <h2>Trusted Chartered Accountants Since 1981</h2>
+      <p>Delivering professional audit, tax, and consulting services.</p>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="about fade-in">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>
+        We are a Kalyan-based CA firm with over 40 years of experience in Cost Auditing, Taxation, and Financial Consulting. 
+        Our clientele spans across multiple sectors including Pharma, Telecom, and Manufacturing.
+      </p>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="services fade-in">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-grid">
+        <div class="service-box">
+          <h3>Cost & Management Accounting</h3>
+          <p>Cost audits, costing systems, and operational auditing solutions.</p>
+        </div>
+        <div class="service-box">
+          <h3>Income Tax & GST</h3>
+          <p>Compliances, return filing, tax planning and representation.</p>
+        </div>
+        <div class="service-box">
+          <h3>Consulting</h3>
+          <p>Business advisory, due diligence, and valuation services.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Owner -->
+  <section id="owner" class="owner fade-in">
+    <div class="container owner-content">
+      <div class="owner-image">
+        <img src="https://media.npr.org/assets/img/2014/08/07/monkey-selfie_custom-6624e8356a07d872997e801d7a04aa8cdc8fbaac.jpg?s=1100&c=50&f=jpeg" alt="Owner Photo" />
+      </div>
+      <div class="owner-info">
+        <h2>Meet the Founder</h2>
+        <h3>CA Isha Oswal</h3>
         <p>
-          We are a Kalyan-based CA firm with over 40 years of experience in Cost
-          Auditing, Taxation, and Financial Consulting. Our clientele spans
-          across multiple sectors including Pharma, Telecom, and Manufacturing.
+          CA Isha Oswal is the founding partner of RDG & Associates with over 10 years of experience in taxation, auditing, and cost management.
+          Her expertise has helped numerous businesses streamline their financial operations with integrity and precision.
         </p>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="services" class="services">
-      <div class="container">
-        <h2>Our Services</h2>
-        <div class="service-grid">
-          <div class="service-box">
-            <h3>Cost & Management Accounting</h3>
-            <p>
-              Cost audits, costing systems, and operational auditing solutions.
-            </p>
-          </div>
-          <div class="service-box">
-            <h3>Income Tax & GST</h3>
-            <p>Compliances, return filing, tax planning and representation.</p>
-          </div>
-          <div class="service-box">
-            <h3>Consulting</h3>
-            <p>Business advisory, due diligence, and valuation services.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!-- Contact -->
+  <section id="contact" class="contact fade-in">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:contact@isha.com">contact@isha.com</a> | Phone: <a href="tel:+919175391729">+91 91753 91729</a></p>
+      <p>Office: 123, College Road, Kalyan, Maharashtra</p>
+    </div>
+  </section>
 
-    <section id="owner" class="owner">
-      <div class="container owner-content">
-        <div class="owner-image">
-          <img
-            src="https://media.npr.org/assets/img/2014/08/07/monkey-selfie_custom-6624e8356a07d872997e801d7a04aa8cdc8fbaac.jpg?s=1100&c=50&f=jpeg"
-            alt="Owner Photo"
-          />
-        </div>
-        <div class="owner-info">
-          <h2>Meet the Founder</h2>
-          <h3>CA Isha Oswal</h3>
-          <p>
-            CA Isha Oswal is the founding partner of RDG & Associates with over
-            10 years of experience in taxation, auditing, and cost management.
-            His expertise has helped numerous businesses streamline their
-            financial operations with integrity and precision.
-          </p>
-        </div>
-      </div>
-    </section>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Isha & Associates | All Rights Reserved.</p>
+    </div>
+  </footer>
 
-    <section id="contact" class="contact">
-      <div class="container">
-        <h2>Contact Us</h2>
-        <p>Email: contact@isha.com | Phone: +91 91753 91729</p>
-        <p>Office: 123,College Road, Kalyan, Maharashtra</p>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <p>&copy; 2025 Isha & Associates | All Rights Reserved.</p>
-      </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
-
