--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="owner" class="owner fade-in">
     <div class="container owner-content">
       <div class="owner-image">
-        <img src="https://media.npr.org/assets/img/2014/08/07/monkey-selfie_custom-6624e8356a07d872997e801d7a04aa8cdc8fbaac.jpg?s=1100&c=50&f=jpeg" alt="Owner Photo" />
+        <img src="https://media.licdn.com/dms/image/v2/D4D03AQH_ZD0_T5GxbQ/profile-displayphoto-shrink_800_800/B4DZUIFQV8HIAc-/0/1739597351199?e=1757548800&v=beta&t=3xNcjabsA9lntiQcfCPt8n49GJvEwd99j8Ks8hbf4AI" />
       </div>
       <div class="owner-info">
         <h2>Meet the Founder</h2>
@@ -102,3 +102,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
