--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="owner-info">
         <h2>Meet the Founder</h2>
-        <h3>CA Isha Oswal</h3>
+        <h3>CMA Isha Oswal</h3>
         <p>
           CA Isha Oswal is the founding partner of RDG & Associates with over 10 years of experience in taxation, auditing, and cost management.
           Her expertise has helped numerous businesses streamline their financial operations with integrity and precision.
@@ -102,4 +102,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
